# geomagic_touch_x_ros_driver

./: CMakeLists.txt  LICENSE  README.md  calibrate.sh  package.xml  pair.sh  rviz.rviz
launch/: demo_impedance_control.launch  geomagic_touch_x.launch
scripts/: demo_impedance_control.py
src/: geomagic_touch_x_node.cpp
